Fix for bug 17677 (cropping issue with closed tabs) caused closed tabs with images to show the image in the closed tab list.  This fixes that.

--- a/chrome/skin/classic/sessionmanager/sessionmanager.css
+++ b/chrome/skin/classic/sessionmanager/sessionmanager.css
@@ -44,3 +44,8 @@ toolbar[iconsize="small"] #sessionmanager-undo[disabled="true"] {
 toolbar[iconsize="small"] #sessionmanager-toolbar {
 	-moz-image-region: rect(15px, 72px, 31px, 56px);
 }
+.sessionmanager-closedtab-item > .menu-iconic-left > .menu-iconic-icon {
+  width: 16px;
+  height: 16px;
+  -moz-padding-start: 0px;
+}
